# actix-diesel-rust

./: .gitignore  Cargo.toml  docker-compose.yaml  dockerfile
migrations/2023-02-04-154702_create_article_table/: down.sql  up.sql
migrations/2023-02-04-165006_create_app_user_table/: down.sql  up.sql
migrations/2023-03-04-170817_date_time/: down.sql  up.sql
migrations/2023-03-04-172324_user_created/: down.sql  up.sql
src/: main.rs  schema.rs
src/entities/: article.rs  auth.rs  user.rs
src/helpers/: config.rs  error.rs  extractors.rs  factory.rs  mappers.rs  mod.rs
src/repositories/: article.rs  mod.rs  user.rs
src/routers/: article.rs  auth.rs  mod.rs  user.rs
src/services/: article.rs  auth.rs  user.rs
