[package]
name = "ms-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
log = "0.4"
r2d2 = "0.8"
argon2 = "0.4"
jsonwebtoken = "8.2"
dotenv = "0.15"
config = "0.13"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
